# ocloud-telemetry-agent

./: .gitignore  Dockerfile  Installation and Running guide.md  README.md  Running guide.md  finding.md  pyproject.toml
agent/: config.py  main.py  once.py  util.py
agent/api/: rest.py
agent/collectors/: base.py  cpufreq.py  cpuidle.py  health.py  numa.py  perf.py  procstat.py  rapl.py  redfish.py  threads.py  topology.py  uncore.py
agent/core/: run.py  sampler.py
agent/sinks/: filesink.py
analysis/: load.py
deploy/: daemonset.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  service.yaml
docs/: BLUEPRINT.md  architecture.md  findings.md  ics.md
influxDB/: influx.py  ocloud-ship.service  readme.md  ship_influx.sh
o2/: README.md  measurement_job.py
pm-dictionary/: ocloud-du-pm-dictionary.json
sripts/: analyze.sh  capture.sh
tests/: test_correctness.py
tools/: baseline.py  redfish_probe.py  run_campaign.sh  test_classify.sh
